log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      namespace: exercises
      labels:
        app: logoutput
    spec:
      volumes: # Define volume
        - name: shared-log
          emptyDir: {}
      containers:
        - name: logoutput-reader
          image: kallepohjanjoki/log_output-reader:v1.4
          volumeMounts: # Mount volume
            - name: shared-log
              mountPath: /shared/
        - name: image-response
          image: kallepohjanjoki/log_output-writer:v1
          volumeMounts: # Mount volume
            - name: shared-log
              mountPath: /shared/
