log_output/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logoutput-route
  namespace: exercises
spec:
  parentRefs:
    - name: exercises-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: logoutput-svc
          port: 2346
